--- a/app/src/main/res/layout/fragment_play_layout.xml
+++ b/app/src/main/res/layout/fragment_play_layout.xml
@@ -3,14 +3,37 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="#060606"
     android:layout_height="match_parent">
+
+    <RelativeLayout
+        android:id="@+id/rl_close"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_centerVertical="true"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="UselessParent">
+
+        <ImageView
+            android:id="@+id/iv_close"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:padding="6dp"
+            android:src="@mipmap/zc_setting_back"
+            tools:ignore="ContentDescription" />
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btn_get_version"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="获取ffmpeg版本"
-        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="20dp"
+        app:layout_constraintStart_toEndOf="@+id/rl_close"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
