--- a/app/src/main/res/layout/fragment_rtmp_layout.xml
+++ b/app/src/main/res/layout/fragment_rtmp_layout.xml
@@ -11,6 +11,7 @@
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_centerVertical="true"
+        android:background="#060606"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="UselessParent">
@@ -31,10 +32,28 @@
         android:id="@+id/btn_ff_push"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:text="rtmp推流"
         app:layout_constraintStart_toEndOf="@id/rl_close"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
+
+
+    <Button
+        android:id="@+id/btn_ff_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:text="停止rtmp推流"
+        app:layout_constraintStart_toEndOf="@id/btn_ff_push"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextureView
+        android:id="@+id/textureView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/rl_close" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
