--- a/app/src/main/res/layout/fragment_main_layout.xml
+++ b/app/src/main/res/layout/fragment_main_layout.xml
@@ -24,6 +24,16 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
+    <Button
+        android:id="@+id/btn_ff_gl_camera"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:text="GLCamera"
+        app:layout_constraintStart_toEndOf="@+id/btn_ff_rtmp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
