OpenGL相机操作：抽取CameraPreView类

--- a/app/src/main/res/layout/fragment_opengl_camera_layout.xml
+++ b/app/src/main/res/layout/fragment_opengl_camera_layout.xml
@@ -10,7 +10,7 @@
         android:id="@+id/btn_gl_back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:text="返回"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -20,35 +20,36 @@
         android:id="@+id/btn_camera_pre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="5dp"
         android:text="摄像头预览"
         app:layout_constraintStart_toEndOf="@id/btn_gl_back"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
-
+    
     <Button
         android:id="@+id/btn_gl_camera1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:text="opengl分屏"
+        android:layout_marginStart="5dp"
+        android:text="GL聚光手电筒"
         app:layout_constraintStart_toEndOf="@id/btn_camera_pre"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
-
-
-    <TextureView
-        android:id="@+id/textureView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    
+    <Button
+        android:id="@+id/btn_gl_camera2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="GL聚光手电筒"
+        app:layout_constraintStart_toEndOf="@id/btn_gl_camera1"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
     <FrameLayout
         android:id="@+id/gl_show"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
