OpenGL相机操作：OpenglesCameraPre.cpp操作类

--- a/app/src/main/res/layout/fragment_opengl_camera_layout.xml
+++ b/app/src/main/res/layout/fragment_opengl_camera_layout.xml
@@ -41,7 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="GL聚光手电筒"
+        android:text="GL摄像机预览"
         app:layout_constraintStart_toEndOf="@id/btn_gl_camera1"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
