--- a/app/src/main/res/layout/fragment_opengl_camera_layout.xml
+++ b/app/src/main/res/layout/fragment_opengl_camera_layout.xml
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="GLSurfaceView"
+        android:text="自定义GLSurfaceView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_gl_back"
         tools:ignore="HardcodedText" />
