自定义GlSurfaceView显示视频:FBO离屏视频录制前置

--- a/app/src/main/res/layout/fragment_opengl_camera_layout.xml
+++ b/app/src/main/res/layout/fragment_opengl_camera_layout.xml
@@ -86,6 +86,16 @@
         app:layout_constraintTop_toBottomOf="@+id/btn_gl_back"
         tools:ignore="HardcodedText" />
 
+    <Button
+        android:id="@+id/btn_surface_new_record"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="自定义GLSurfaceView start recording"
+        app:layout_constraintStart_toEndOf="@+id/btn_surface_new"
+        app:layout_constraintTop_toBottomOf="@+id/btn_gl_back"
+        tools:ignore="HardcodedText" />
+
     <FrameLayout
         android:id="@+id/gl_show"
         android:layout_width="match_parent"
