--- a/app/src/main/res/layout/fragment_opengl_camera_layout.xml
+++ b/app/src/main/res/layout/fragment_opengl_camera_layout.xml
@@ -101,7 +101,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="GL视频中绘制文本"
+        android:text="GL视频中绘制图片文本水印"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btn_surface"
         tools:ignore="HardcodedText" />
@@ -110,7 +110,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
-        android:text="GL绘制文本开始录制"
+        android:text="GL视频中绘制图片文本水印开始录制"
         app:layout_constraintStart_toEndOf="@+id/btn_draw_text_surface"
         app:layout_constraintTop_toBottomOf="@+id/btn_surface"
         tools:ignore="HardcodedText" />
