--- a/app/src/main/res/layout/fragment_main_layout.xml
+++ b/app/src/main/res/layout/fragment_main_layout.xml
@@ -34,6 +34,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
-
+    <Button
+        android:id="@+id/btn_ff_gl_fbo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:text="GL帧缓冲视频处理"
+        app:layout_constraintStart_toEndOf="@+id/btn_ff_gl_camera"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="HardcodedText" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
