--- a/app/src/main/res/layout/fragment_rtmp_layout.xml
+++ b/app/src/main/res/layout/fragment_rtmp_layout.xml
@@ -6,27 +6,15 @@
     android:layout_height="match_parent"
     android:background="#060606">
 
-    <RelativeLayout
-        android:id="@+id/rl_close"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_centerVertical="true"
-        android:background="#060606"
+    <Button
+        android:id="@+id/btn_rtmp_back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:text="返回"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="UselessParent">
-
-        <ImageView
-            android:id="@+id/iv_close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:padding="6dp"
-            android:src="@mipmap/zc_setting_back"
-            tools:ignore="ContentDescription" />
-
-    </RelativeLayout>
+        tools:ignore="HardcodedText" />
 
     <Button
         android:id="@+id/btn_ff_push"
@@ -34,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:text="rtmp推流"
-        app:layout_constraintStart_toEndOf="@id/rl_close"
+        app:layout_constraintStart_toEndOf="@id/btn_rtmp_back"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="HardcodedText" />
 
